# AGV

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
backend/: app.py
docs/: DELIVERY_REPORT.md  architecture.md  integration_plan.md
harbour_assets_description/: CMakeLists.txt
harbour_assets_description/models/container-multi-stack/: model.sdf
harbour_assets_description/models/container40/: model.sdf
harbour_assets_description/models/crane1/: model.sdf
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/harbour_assets_description/share/harbour_assets_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_gz_example_gazebo/share/ros_gz_example_gazebo/: package.sh  (+5 more)
log/: latest_build
ros_gz_project_template/ros_gz_example_bringup/config/: agv_ackermann.rviz  ros_gz_agv_ackermann_bridge.yaml
ros_gz_project_template/ros_gz_example_bringup/launch/: harbour_diff_drive.launch.py  simplified_port_agv_terrain_400m.launch.py
ros_gz_project_template/ros_gz_example_gazebo/: CMakeLists.txt
ros_gz_project_template/ros_gz_example_gazebo/worlds/: harbour_diff_drive.sdf
scripts/: common_env.sh  start_all.sh  start_all_tmux.sh  start_controller.sh  start_gazebo.sh  start_web_dashboard.sh
web_dashboard/: app.py  config.yaml  odom_tf_publisher.py  odom_visual_helper.py  risk_fusion.py  risk_layer.py  start_server.sh
web_dashboard/install/: local_setup.sh  setup.ps1  setup.sh
web_dashboard/log/: latest_build
web_dashboard/static/css/: alerts.css  fleet.css  platform.css
web_dashboard/static/js/: alerts-page.js  fleet-page.js  platform-common.js  risk-page.js  tasks-page.js
web_dashboard/templates/: _platform_topbar.html  alerts.html  dashboard.html  fleet.html  platform_layout.html  risk.html  tasks.html
(+85 files in other folders)
